# Cpp-Dev

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
include/project_name/: project_name.h
scripts/: README.md  quality.py  rename_project.py
src/: project_name.cc
test/: CMakeLists.txt  project_name_test.cc
